attempt to fix jumpy accordion panel with overflow: auto

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,6 +198,7 @@ audio {
 /*override bootstrap accordian panel colors*/
 .panel-default > .panel-heading {
 	background: linear-gradient(-45deg,#191970, rgba(0,0,0,1), #333);
+	overflow: auto;
 }
 
 .panel-title {
